# CTU_icp_node

./: .gitignore  CMakeLists.txt  package.xml  plugins.xml
config/: localization.yaml  rv.rviz
include/: IcpNode.h  aliases.h  static_cloud.h  tools.h
launch/: dynpar.launch  icp_node.launch  lidar_node.launch  rviz.launch
rviz/: rv.rviz
src/: IcpNode.cpp  pcl_loader.cpp  static_cloud.cpp  tools.cpp  tools.h
tmux_scripts/: debug.sh  session.yml  session_debug.yml
